Fixes right panel scroll. Right panel no longer fixed - no double scroll bars

--- a/custom/themes/lgo/src/sass/base/_layout.scss
+++ b/custom/themes/lgo/src/sass/base/_layout.scss
@@ -144,8 +144,8 @@ footer.page-footer {
     background-attachment: fixed;
     transition: all 0.5s ease;
     // 
-    height: 100vh;
-    overflow-y:scroll;
+    // height: 100vh;
+    // overflow-y:scroll;
     position: relative;
     .dark-overlay {
       z-index: 200;
