--- a/custom/themes/lgo/src/sass/base/_typography.scss
+++ b/custom/themes/lgo/src/sass/base/_typography.scss
@@ -42,7 +42,7 @@ h1, h2, h3, h4, h5, h6 {
 .full-width-panel {
     color: $body-copy;
     .child-page-content {
-        margin-bottom: 100px;
+        // margin-bottom: 100px;
     }
     h2 {
         font-family: $sans-serif-font;
